# istat

./: Cargo.toml  Dockerfile  LICENSE  LICENSE-MIT  MODERATION_IMPLEMENTATION.md  MODERATION_UPGRADE_GUIDE.md  README.md  docker-compose.yml
.claude/: CLAUDE.md  identity-ingestor.md  settings.local.json
.github/workflows/: build.yml
frontend/: env.d.ts  index.html  lex.config.js  package.json  pnpm-lock.yaml  vite-env.d.ts  vite.config.ts
frontend/public/: client-metadata.json
frontend/src/: main.tsx  routeTree.gen.ts  styles.css
frontend/src/components/: Footer.tsx  Header.tsx  SignInBanner.tsx  StatusCard.tsx  StatusFeed.tsx  SubmitModal.tsx  UserBanner.tsx
frontend/src/lexicons/: index.ts
frontend/src/lexicons/types/app/bsky/actor/: profile.ts
frontend/src/lexicons/types/vg/nat/istat/actor/: getProfile.ts
frontend/src/lexicons/types/vg/nat/istat/moderation/: blacklistCid.ts  isAdmin.ts  listAuditLog.ts  listBlacklisted.ts  removeBlacklist.ts
frontend/src/lexicons/types/vg/nat/istat/moji/: deleteEmoji.ts  emoji.ts  searchEmoji.ts
frontend/src/lexicons/types/vg/nat/istat/status/: deleteStatus.ts  getStatus.ts  listStatuses.ts  listUserStatuses.ts  record.ts
frontend/src/lib/: oauth.ts  proxy-resolver.ts  qt-provider.tsx  theme.tsx  toast.tsx  useIsAdmin.ts
frontend/src/routes/: $handle.tsx  __root.tsx  admin.tsx  index.tsx
frontend/src/routes/oauth/: callback.tsx
jacquard-oatproxy/: Cargo.toml  descriptive-readme.md  readme.md
jacquard-oatproxy/examples/simple_server/: main.rs  memory_store.rs
jacquard-oatproxy/src/: auth.rs  config.rs  error.rs  handlers.rs  lib.rs  server.rs  session.rs  store.rs  token.rs
jacquard-oauth-proxy/: Cargo.toml  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  QUICKSTART.md  REMAINING_WORK.md
jacquard-oauth-proxy/src/: config.rs  error.rs  lib.rs  server.rs  store.rs  token.rs
lex/: actor.getProfile.json  emoji.deleteEmoji.json  moderation.blacklistCid.json  moderation.isAdmin.json  moderation.listAuditLog.json  moderation.listBlacklisted.json  moderation.removeBlacklist.json  moji.emoji.json  moji.searchEmoji.json  status.deleteStatus.json  status.getStatus.json  status.listStatuses.json  status.listUserStatuses.json  status.record.json
lexicons/: Cargo.toml  app_bsky.rs  lib.rs  vg_nat.rs
lexicons/app_bsky/actor/: profile.rs
lexicons/vg_nat/: istat.rs
lexicons/vg_nat/istat/: actor.rs  moderation.rs  moji.rs  status.rs
lexicons/vg_nat/istat/actor/: get_profile.rs
lexicons/vg_nat/istat/moderation/: blacklist_cid.rs  is_admin.rs  list_audit_log.rs  list_blacklisted.rs  remove_blacklist.rs
lexicons/vg_nat/istat/moji/: delete_emoji.rs  emoji.rs  search_emoji.rs
lexicons/vg_nat/istat/status/: delete_status.rs  get_status.rs  list_statuses.rs  list_user_statuses.rs  record.rs
server/: Cargo.toml
server/migrations/: 001_initial_schema.sql  002_auth_schema.sql  20251116000000_initial_schema.sql  20251116000001_add_emoji_name.sql  20251122000000_add_moderation.sql  20251122000001_add_audit_log.sql
server/src/: jetstream.rs  main.rs  oauth.rs
server/src/oatproxy/: store.rs
server/src/xrpc/: mod.rs  moderation.rs
