[workspace]
members = ["server", "lexicons", "jacquard-oatproxy"]
resolver = "2"

[workspace.dependencies]
jacquard = { path = "../jacquard/crates/jacquard" }
jacquard-axum = { path = "../jacquard/crates/jacquard-axum" }
jacquard-common = { path = "../jacquard/crates/jacquard-common" }
jacquard-identity = { path = "../jacquard/crates/jacquard-identity" }
jacquard-oauth = { path = "../jacquard/crates/jacquard-oauth" }
jacquard-derive = { path = "../jacquard/crates/jacquard-derive" }
jacquard-lexicon = { path = "../jacquard/crates/jacquard-lexicon" }
