[package]
name = "jacquard-oatproxy"
version = "0.1.0"
edition = "2024"

[features]
default = ["axum"]
axum = ["dep:axum"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", optional = true }
chrono = { version = "0.4", features = ["serde"] }
dpop-verifier = "4.4"
hex = "0.4"
http = "1.2"
jacquard-common = { workspace = true }
jacquard-identity = { workspace = true }
jacquard-oauth = { workspace = true }
jose-jwk = "0.1"
jose-jws = "0.1"
p256 = { version = "0.13", features = ["ecdsa"] }
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
url = { version = "2.5", features = ["serde"] }
urlencoding = "2.1"

[[example]]
name = "simple_server"
path = "examples/simple_server/main.rs"

[dev-dependencies]
bincode = "1.3"
miette = { version = "7.6.0", features = ["fancy"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }
