[package]
name = "lexicons"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
jacquard-common = "0.9.0"
jacquard-derive = "0.9.0"
jacquard-lexicon = "0.9.0"
miette = "7.6.0"
rustversion = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
unicode-segmentation = "1.12"

[features]
default = ["vg_nat"]
vg_nat = []
