[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8.6"
chrono = "0.4"
http = "1.2"

# Use workspace dependencies declared in the top-level Cargo.toml
jacquard = { workspace = true }
jacquard-axum = { workspace = true }
jacquard-common = { workspace = true }
jacquard-identity = { workspace = true }
jacquard-oauth = { workspace = true }

# Local workspace member
jacquard-oatproxy = { path = "../jacquard-oatproxy" }

jose-jwk = "0.1"
lexicons = { path = "../lexicons" }
miette = { version = "7.6.0", features = ["fancy"] }
p256 = "0.13"
rand = "0.8"
reqwest = { version = "0.12.24", features = ["json"] }
rocketman = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_html_form = "0.2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }
